--- a/styles/index.css
+++ b/styles/index.css
@@ -45,19 +45,109 @@ container{
     grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
     gap: 20px; /* Espacio entre las columnas */
     padding: 40px;
-}
+    }
 section {
-    background-color: #f4f4f4;
+    background-image: url('https://e0.pxfuel.com/wallpapers/719/592/desktop-wallpaper-black-and-blue-background-black-dark-blue.jpg');
     padding: 20px;
     text-align: center;
 }
 section h2 {
     margin-top: 0;
+    color: white;
 }
 section p {
     margin-bottom: 20px;
+    color: white;
+
 }
 iframe {
     width: 100%;
     height: 400px;
 }
+.logo {
+    display: flex; /* Para alinear el logo y el texto verticalmente */
+    align-items: flex-start; /* Alineación del logo en la parte superior */
+}
+.logo img {
+    width: 80px;
+    height: auto;
+}
+
+.logo h1 {
+    margin: 0;
+    margin-left: 10px; /* Espacio entre la imagen y el texto del logo */
+}
+.container1 {
+    width: 100%;
+    max-width: 122.5rem;
+    margin:  0 auto;
+    padding: 15px;
+    background-image: url('');
+    background-repeat:no-repeat;
+    
+}
+.global {
+    text-align: center;
+    margin-top: 3.9rem;
+}
+
+.dis-sto .global {
+    margin-top: 6.9rem;
+}
+
+.global .circle {
+    color: #3bcc75;
+    margin: 2.4rem 0;
+}
+
+footer {
+    background-color: #000;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .social-icons {
+    margin-top: 10px;
+  }
+
+  .social-icon {
+    display: inline-block;
+    margin: 0 10px;
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+  }
+  .social-icon img {
+    width: 32px;
+    height: 32px;
+  }
+
+  .email-form {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .email-input {
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+  }
+
+  .register-button {
+    padding: 8px 20px;
+    margin-left: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #3498db;
+    color: white;
+    cursor: pointer;
+  }
+
+  .register-button:hover {
+    background-color: #2980b9;
+  }
+
+
