--- a/styles/index.css
+++ b/styles/index.css
@@ -34,7 +34,7 @@ nav a:hover {
     color: blue; /* Cambio de color al pasar el cursor */
 }
 .second-nav {
-    background-color: blue;
+    background-image: url("https://img1.picmix.com/output/stamp/original/7/3/5/1/541537_5b20a.gif");
     color: white;
     display: flex;
     justify-content: center;
@@ -46,24 +46,8 @@ container{
     gap: 20px; /* Espacio entre las columnas */
     padding: 40px;
     }
-section {
-    background-image: url('https://e0.pxfuel.com/wallpapers/719/592/desktop-wallpaper-black-and-blue-background-black-dark-blue.jpg');
-    padding: 20px;
-    text-align: center;
-}
-section h2 {
-    margin-top: 0;
-    color: white;
-}
-section p {
-    margin-bottom: 20px;
-    color: white;
 
-}
-iframe {
-    width: 100%;
-    height: 400px;
-}
+  
 .logo {
     display: flex; /* Para alinear el logo y el texto verticalmente */
     align-items: flex-start; /* Alineación del logo en la parte superior */
@@ -100,11 +84,83 @@ iframe {
     margin: 2.4rem 0;
 }
 
+/*/*/
+.videos-card {
+    width: 600px;
+    height: 650px;
+    margin: 20px auto;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    background-image: url("https://img1.picmix.com/output/stamp/original/7/3/5/1/541537_5b20a.gif");
+  }
+  
+  .videos-card iframe {
+    width: 100%;
+    height: 450px;
+    border: none;
+  }
+  
+  .videos-card p {
+    margin-top: 10px;
+    font-size: 18px;
+    color: white;
+  }
+  iframe {
+    width: 100%;
+    height: 400px;}
+
+.container-carousel-tarjetas{
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
+    gap: 20px; /* Espacio entre las columnas */
+    padding: 40px;
+}
+
+/**//* Estilos para el contenedor del carrusel */
+#carousel-container {
+    text-align: center;
+    display: flex;
+    flex-direction: row; /* Cambiamos la dirección de flexión a horizontal */
+    justify-content: space-between; /* Coloca espacio entre el carrusel y las tarjetas */
+    align-items: flex-end; /* Alinea las tarjetas en la parte inferior del contenedor */
+}
+
+/* Estilos para las tarjetas de video */
+.video-card2 {
+    width: 300px;
+    height: 250px;
+    margin: 20px;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);clear: right; /* Evita que otros elementos floten junto a las tarjetas */
+}
+
+/* Estilos para el texto en las tarjetas */
+.video-card2 p {
+    margin-top: 10px;
+    font-size: 18px;
+    color: black; /* Cambia el color del texto a tu elección */
+}
+
+/* Estilos adicionales según tu preferencia */
+.video-card-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
+    gap: 20px; /* Espacio entre las columnas */
+    padding: 40px;
+
+}
+
 footer {
     background-color: #000;
     color: white;
     padding: 20px;
     text-align: center;
+    margin-top: 0;
   }
 
   .social-icons {
@@ -149,5 +205,14 @@ footer {
   .register-button:hover {
     background-color: #2980b9;
   }
+  /* Estilo para centrar el carrusel */
+  #carousel-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  
 
 
