--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    
+    font-family: Arial, sans-serif;    
 }
 
 header {
@@ -11,8 +10,6 @@ header {
     color: white;
     padding: 10px 20px; /* Agregado padding horizontal */
     display: flex; /* Usar flexbox para alinear elementos */
-    justify-content: space-between; /* Alinear elementos al espacio entre ellos */
-    align-items: center; /* Alinear elementos verticalmente al centro */
 }
 
 h1 {
@@ -22,8 +19,10 @@ nav {
     background-color: black;
     color: white;
     display: flex;
+    width: 80vw;
     align-items: center;
     padding: 10px 0;
+    justify-content:flex-end; /* Alinear elementos al espacio entre ellos */
 }
 nav a {
     color: white;
@@ -33,6 +32,7 @@ nav a {
 nav a:hover {
     color: blue; /* Cambio de color al pasar el cursor */
 }
+
 .second-nav {
     background-color: blue;
     color: white;
@@ -40,36 +40,40 @@ nav a:hover {
     justify-content: center;
     padding: 5px 0;
 }
+
 container{
     display: grid;
     grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
     gap: 20px; /* Espacio entre las columnas */
     padding: 40px;
-    }
+}
+
 section {
     background-image: url('https://e0.pxfuel.com/wallpapers/719/592/desktop-wallpaper-black-and-blue-background-black-dark-blue.jpg');
     padding: 20px;
     text-align: center;
 }
+
 section h2 {
     margin-top: 0;
     color: white;
 }
+
 section p {
     margin-bottom: 20px;
     color: white;
-
 }
+
 iframe {
     width: 100%;
     height: 400px;
 }
-.logo {
-    display: flex; /* Para alinear el logo y el texto verticalmente */
-    align-items: flex-start; /* Alineación del logo en la parte superior */
-}
+/*.logo {
+    display: flex; /* Para alinear el logo y el texto verticalmente 
+    align-items: flex-start;  Alineación del logo en la parte superior
+}*/
 .logo img {
-    width: 80px;
+    width: 20vw;
     height: auto;
 }
 
@@ -77,15 +81,16 @@ iframe {
     margin: 0;
     margin-left: 10px; /* Espacio entre la imagen y el texto del logo */
 }
+
 .container1 {
     width: 100%;
     max-width: 122.5rem;
     margin:  0 auto;
     padding: 15px;
     background-image: url('');
-    background-repeat:no-repeat;
-    
+    background-repeat:no-repeat;    
 }
+
 .global {
     text-align: center;
     margin-top: 3.9rem;
