--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,6 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;    
 }
-
 header {
     background-color: black;
     color: white;
@@ -11,7 +10,6 @@ header {
     padding: 10px 20px; /* Agregado padding horizontal */
     display: flex; /* Usar flexbox para alinear elementos */
 }
-
 h1 {
     margin: 0; /* Eliminar margen por defecto */
 }
@@ -19,7 +17,7 @@ nav {
     background-color: black;
     color: white;
     display: flex;
-    width: 80vw;
+    width: 70%;
     align-items: center;
     padding: 10px 0;
     justify-content:flex-end; /* Alinear elementos al espacio entre ellos */
@@ -68,27 +66,22 @@ iframe {
     width: 100%;
     height: 400px;
 }
-/*.logo {
-    display: flex; /* Para alinear el logo y el texto verticalmente 
-    align-items: flex-start;  Alineación del logo en la parte superior
-}*/
-    }
-
-  
+.logo {
+    display: flex; /* Para alinear el logo y el texto verticalmente*/ 
+    align-items: flex-start;/*Alineación del logo en la parte superior*/
+}
 .logo {
     display: flex; /* Para alinear el logo y el texto verticalmente */
     align-items: flex-start; /* Alineación del logo en la parte superior */
 }
 .logo img {
-    width: 20vw;
+    width: 20%;
     height: auto;
 }
-
 .logo h1 {
     margin: 0;
     margin-left: 10px; /* Espacio entre la imagen y el texto del logo */
 }
-
 .container1 {
     width: 100%;
     max-width: 122.5rem;
@@ -97,22 +90,17 @@ iframe {
     background-image: url('');
     background-repeat:no-repeat;    
 }
-
 .global {
     text-align: center;
     margin-top: 3.9rem;
 }
-
 .dis-sto .global {
     margin-top: 6.9rem;
 }
-
 .global .circle {
     color: #3bcc75;
     margin: 2.4rem 0;
 }
-
-/*/*/
 .videos-card {
     width: 600px;
     height: 650px;
