--- a/styles/index.css
+++ b/styles/index.css
@@ -30,42 +30,34 @@ nav a {
 nav a:hover {
     color: blue; /* Cambio de color al pasar el cursor */
 }
-
+/*http://img1.picmix.com/output/stamp/normal/7/3/5/1/541537_4eef4.gif
+https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif
+https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
 .second-nav {
-    background-image: url("https://img1.picmix.com/output/stamp/original/7/3/5/1/541537_5b20a.gif");
+    background-image: url("https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif");
     color: white;
     display: flex;
     justify-content: center;
     padding: 5px 0;
 }
 
-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
-    gap: 20px; /* Espacio entre las columnas */
-    padding: 40px;
+/*carousel de videos*/
+#carouselExampleDark {
+    width: 700px; /* Cambia el tamaño máximo del carrusel aquí */
+    height: 80vh; /* Establece la altura deseada del carrusel */
+    margin: 10px auto; /* Centra el carrusel en el medio */
+    
 }
 
-section {
-    background-image: url('https://e0.pxfuel.com/wallpapers/719/592/desktop-wallpaper-black-and-blue-background-black-dark-blue.jpg');
-    padding: 20px;
-    text-align: center;
+/* Estilos para los iframes de video */
+.carousel-inner iframe {
+    width: 300vh;
+    height: 70vh;
 }
 
-section h2 {
-    margin-top: 0;
-    color: white;
-}
 
-section p {
-    margin-bottom: 20px;
-    color: white;
-}
 
-iframe {
-    width: 100%;
-    height: 400px;
-}
+
 .logo {
     display: flex; /* Para alinear el logo y el texto verticalmente*/ 
     align-items: flex-start;/*Alineación del logo en la parte superior*/
@@ -101,54 +93,27 @@ iframe {
     color: #3bcc75;
     margin: 2.4rem 0;
 }
-.videos-card {
-    width: 600px;
-    height: 650px;
-    margin: 20px auto;
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    background-image: url("https://img1.picmix.com/output/stamp/original/7/3/5/1/541537_5b20a.gif");
-  }
-  
-  .videos-card iframe {
-    width: 100%;
-    height: 450px;
-    border: none;
-  }
-  
-  .videos-card p {
-    margin-top: 10px;
-    font-size: 18px;
-    color: white;
-  }
-  iframe {
-    width: 100%;
-    height: 400px;}
+
 
 .container-carousel-tarjetas{
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
-    gap: 20px; /* Espacio entre las columnas */
-    padding: 40px;
+    grid-template-rows: 1fr;
+    gap: 5px; /* Espacio entre las columnas */
+    padding: 10px;
 }
 
 /**//* Estilos para el contenedor del carrusel */
 #carousel-container {
-    text-align: center;
-    display: flex;
-    flex-direction: row; /* Cambiamos la dirección de flexión a horizontal */
-    justify-content: space-between; /* Coloca espacio entre el carrusel y las tarjetas */
-    align-items: flex-end; /* Alinea las tarjetas en la parte inferior del contenedor */
+    max-width: 700px; /* Cambia el tamaño máximo del carrusel aquí */
+    max-height:200vh; /* Establece la altura deseada del carrusel */
+    margin: 10px auto; /* Centra el carrusel en el medio */
 }
 
 /* Estilos para las tarjetas de video */
 .video-card2 {
     width: 300px;
     height: 250px;
-    margin: 20px;
+    margin: 10px;
     background-color: #f0f0f0;
     padding: 20px;
     border-radius: 10px;
@@ -163,14 +128,16 @@ iframe {
 }
 
 /* Estilos adicionales según tu preferencia */
-.video-card-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Dividir el container en dos columnas */
+.tarjetas-card-container{
+    display: flex;
+    flex-direction: row; /* Dividir el container en dos columnas */
+    justify-content: space-between;
     gap: 20px; /* Espacio entre las columnas */
     padding: 40px;
-
+    margin: 20px auto;
 }
 
+  /************************************************/
 footer {
     background-color: #000;
     color: white;
@@ -221,13 +188,7 @@ footer {
   .register-button:hover {
     background-color: #2980b9;
   }
-  /* Estilo para centrar el carrusel */
-  #carousel-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
+
 
   
 
