diseño de tarjetas y acordion y letra

--- a/styles/index.css
+++ b/styles/index.css
@@ -15,20 +15,14 @@ h1 {
 }
 nav {
     background-color: black;
-    color: white;
-    display: flex;
-    width: 70%;
-    align-items: center;
-    padding: 10px 0;
-    justify-content:flex-end; /* Alinear elementos al espacio entre ellos */
+    font-weight: bold;
 }
-nav a {
-    color: white;
-    text-decoration: none;
-    margin: 0 15px;
+.navbar{
+    letter-spacing: 1.5px;
 }
-nav a:hover {
+.navbar:hover {
     color: blue; /* Cambio de color al pasar el cursor */
+    font-weight: bolder;
 }
 /*http://img1.picmix.com/output/stamp/normal/7/3/5/1/541537_4eef4.gif
 https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif
@@ -39,6 +33,7 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     display: flex;
     justify-content: center;
     padding: 5px 0;
+    letter-spacing: 15px;
 }
 
 /*carousel de videos*/
@@ -114,17 +109,24 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     width: 300px;
     height: 250px;
     margin: 10px;
-    background-color: #f0f0f0;
+    background-color: #0f2975;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);clear: right; /* Evita que otros elementos floten junto a las tarjetas */
-}
+    border-radius: 50px;
+    overflow: hidden;
+    box-shadow: -1px -1px 6px 0 rgb(36, 220, 234), 8px 8px 26px 6px rgb(86, 163, 245);}
+
+
 
 /* Estilos para el texto en las tarjetas */
 .video-card2 p {
     margin-top: 10px;
     font-size: 18px;
-    color: black; /* Cambia el color del texto a tu elección */
+    color: white;
+}
+span{
+    
+    font-weight: bold;
+    font-size: 30px;
 }
 
 /* Estilos adicionales según tu preferencia */
@@ -135,6 +137,17 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     gap: 20px; /* Espacio entre las columnas */
     padding: 40px;
     margin: 20px auto;
+}
+
+#accordionFlushExample{
+    border-color: #1843c1;
+    border-width: 5px;
+    border-style: dashed;
+}
+.accordion-item{
+    border-color: #1843c1;
+    border-width: 5px;
+    border-style: dotted;
 }
 
   /************************************************/
