--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -15,20 +17,25 @@ h1 {
 }
 nav {
     background-color: black;
-    color: white;
-    display: flex;
-    width: 70%;
-    align-items: center;
-    padding: 10px 0;
-    justify-content:flex-end; /* Alinear elementos al espacio entre ellos */
+    font-weight: bold;
 }
-nav a {
-    color: white;
-    text-decoration: none;
-    margin: 0 15px;
+.navbar{
+    letter-spacing: 1.5px;
 }
-nav a:hover {
-    color: blue; /* Cambio de color al pasar el cursor */
+.navbar:hover {
+    color: rgb(47, 47, 223); /* Cambio de color al pasar el cursor */
+    font-weight: bolder;
+}
+.card-banner{
+    width: 40%; 
+    padding: 2rem;
+    margin-top: 10%; 
+    margin-left: 10%; 
+    letter-spacing: 1.5px;
+    font-family: 'DM Serif Display', serif;
+}
+spam{
+    color: rgb(25, 25, 207);
 }
 /*http://img1.picmix.com/output/stamp/normal/7/3/5/1/541537_4eef4.gif
 https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif
