--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ header {
 h1 {
     margin: 0; /* Eliminar margen por defecto */
 }
+/*navbar*/
 nav {
     background-color: black;
     font-weight: bold;
@@ -26,22 +27,34 @@ nav {
     color: rgb(47, 47, 223); /* Cambio de color al pasar el cursor */
     font-weight: bolder;
 }
+/*First banner*/
 .card-banner{
     width: 40%; 
-    padding: 2rem;
-    margin-top: 10%; 
+    margin-top: 20%; 
     margin-left: 10%; 
     letter-spacing: 1.5px;
     font-family: 'DM Serif Display', serif;
+    text-align: center;
+    line-height: 1rem;
+    font-size: 20rem;
 }
 spam{
     color: rgb(25, 25, 207);
 }
+.imagen-asesor{
+    width: 100%;
+    height: 42rem;
+    object-fit: contain;
+    object-position: bottom;
+    background-position: right;
+    background-attachment: fixed;
+}
 /*http://img1.picmix.com/output/stamp/normal/7/3/5/1/541537_4eef4.gif
 https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif
 https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
+/*Tittle*/
 .second-nav {
-    background-image: url("https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif");
+    background: radial-gradient(circle at 50%, rgba(255,255,255,0) 30%,rgba(255,255,255,1) 69%,rgba(255,255,255,1) 100%), url("https://i.pinimg.com/originals/ee/17/cb/ee17cb01b02bde608e84dcac1595f860.gif");
     color: white;
     display: flex;
     justify-content: center;
@@ -56,16 +69,11 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     margin: 10px auto; /* Centra el carrusel en el medio */
     
 }
-
 /* Estilos para los iframes de video */
 .carousel-inner iframe {
     width: 300vh;
     height: 70vh;
 }
-
-
-
-
 .logo {
     display: flex; /* Para alinear el logo y el texto verticalmente*/ 
     align-items: flex-start;/*Alineación del logo en la parte superior*/
@@ -101,13 +109,13 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     color: #3bcc75;
     margin: 2.4rem 0;
 }
-
-
 .container-carousel-tarjetas{
     display: grid;
     grid-template-rows: 1fr;
     gap: 5px; /* Espacio entre las columnas */
     padding: 10px;
+    justify-items: center;
+    justify-content: center;
 }
 
 /**//* Estilos para el contenedor del carrusel */
@@ -118,18 +126,30 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
 }
 
 /* Estilos para las tarjetas de video */
+.tarjetas-card-container{
+    display: flex;
+    flex-direction: row; /* Dividir el container en dos columnas */
+    justify-content:center;
+    gap: 20px; /* Espacio entre las columnas */
+    padding: 40px;
+    margin: 20px auto;
+}
 .video-card2 {
-    width: 300px;
-    height: 250px;
-    margin: 10px;
-    background-color: #0f2975;
-    padding: 20px;
-    border-radius: 50px;
+    height: 15rem;
+    margin: 1rem;
+    background-color: #0e2a7fbe;
+    padding: 1rem;
+    border-radius: 15%;
     overflow: hidden;
-    box-shadow: -1px -1px 6px 0 rgb(36, 220, 234), 8px 8px 26px 6px rgb(86, 163, 245);}
-
-
-
+    box-shadow: -1px -1px 0px 0 rgb(36, 220, 234), 10px 10px 15px 0px rgb(86, 163, 245);
+}
+.second-card{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
+}
 /* Estilos para el texto en las tarjetas */
 .video-card2 p {
     margin-top: 10px;
@@ -142,24 +162,14 @@ span{
     font-size: 30px;
 }
 
-/* Estilos adicionales según tu preferencia */
-.tarjetas-card-container{
-    display: flex;
-    flex-direction: row; /* Dividir el container en dos columnas */
-    justify-content: space-between;
-    gap: 20px; /* Espacio entre las columnas */
-    padding: 40px;
-    margin: 20px auto;
-}
-
 #accordionFlushExample{
     border-color: #1843c1;
-    border-width: 5px;
+    border-width: 0.5px;
     border-style: dashed;
 }
 .accordion-item{
     border-color: #1843c1;
-    border-width: 5px;
+    border-width: 1px;
     border-style: dotted;
 }
 
