ajuste de tarjetas card

--- a/styles/index.css
+++ b/styles/index.css
@@ -135,7 +135,7 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     margin: 20px auto;
 }
 .video-card2 {
-    height: 15rem;
+    height: 19rem;
     margin: 1rem;
     background-color: #0e2a7fbe;
     padding: 1rem;
@@ -143,6 +143,11 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
     overflow: hidden;
     box-shadow: -1px -1px 0px 0 rgb(36, 220, 234), 10px 10px 15px 0px rgb(86, 163, 245);
 }
+.custom-width {
+    width: 300px; /* Puedes ajustar el ancho como desees */
+    margin: 0 auto; /* Esto centra la tarjeta horizontalmente en su contenedor */
+}
+
 .second-card{
     display: flex;
     flex-direction: row;
@@ -153,7 +158,7 @@ https://i.pinimg.com/originals/31/bd/da/31bdda3a24e488e603959ec8f864c0cd.gif*/
 /* Estilos para el texto en las tarjetas */
 .video-card2 p {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 16px;
     color: white;
 }
 span{
